// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page correctly renders a global element 1`] = `
.emotion-0 {
  max-width: 100%;
}

@media only screen and (min-width: 769px) {
  .emotion-0 {
    width: 700px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .emotion-0 {
    width: 700px;
  }
}

@media only screen and (max-width: 575px) {
  .emotion-0 {
    width: 700px;
  }
}

@media only screen and (min-width: 769px) {
  .emotion-1 {
    margin-top: 40px;
    margin-right: auto;
    margin-bottom: 20px;
    margin-left: auto;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .emotion-1 {
    margin-top: 40px;
    margin-right: auto;
    margin-bottom: 20px;
    margin-left: auto;
  }
}

@media only screen and (max-width: 575px) {
  .emotion-1 {
    margin-top: 40px;
    margin-right: auto;
    margin-bottom: 20px;
    margin-left: auto;
  }
}

.emotion-2 {
  margin: 0;
}

<div
  class="emotion-0 emotion-1"
  id="title"
>
  <div
    style="position: relative; white-space: pre-wrap; word-wrap: break-word;"
  >
    <p
      class="emotion-2 ms-xebgmj"
    >
      <span
        class="ms-srm1zu"
      >
        About Us
      </span>
    </p>
  </div>
</div>
`;

exports[`Page correctly renders a global element: Makeswift styles 1`] = `
[
  "@media only screen and (min-width: 769px){.ms-srm1zu{font-family:Lato;font-size:30px;font-weight:700;line-height:1.5;font-style:initial;}}@media only screen and (min-width: 576px) and (max-width: 768px){.ms-srm1zu{font-family:Lato;font-size:30px;font-weight:700;line-height:1.5;font-style:initial;}}@media only screen and (max-width: 575px){.ms-srm1zu{font-family:Lato;font-size:16px;font-weight:700;line-height:1.5;font-style:initial;}}",
]
`;

exports[`Page correctly renders a localized global element 1`] = `
.emotion-0 {
  max-width: 100%;
}

@media only screen and (min-width: 769px) {
  .emotion-0 {
    width: 700px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .emotion-0 {
    width: 700px;
  }
}

@media only screen and (max-width: 575px) {
  .emotion-0 {
    width: 700px;
  }
}

.emotion-0 {
  max-width: 100%;
}

@media only screen and (min-width: 769px) {
  .emotion-0 {
    width: 700px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .emotion-0 {
    width: 700px;
  }
}

@media only screen and (max-width: 575px) {
  .emotion-0 {
    width: 700px;
  }
}

@media only screen and (min-width: 769px) {
  .emotion-1 {
    margin-top: 40px;
    margin-right: auto;
    margin-bottom: 20px;
    margin-left: auto;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .emotion-1 {
    margin-top: 40px;
    margin-right: auto;
    margin-bottom: 20px;
    margin-left: auto;
  }
}

@media only screen and (max-width: 575px) {
  .emotion-1 {
    margin-top: 40px;
    margin-right: auto;
    margin-bottom: 20px;
    margin-left: auto;
  }
}

@media only screen and (min-width: 769px) {
  .emotion-1 {
    margin-top: 40px;
    margin-right: auto;
    margin-bottom: 20px;
    margin-left: auto;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .emotion-1 {
    margin-top: 40px;
    margin-right: auto;
    margin-bottom: 20px;
    margin-left: auto;
  }
}

@media only screen and (max-width: 575px) {
  .emotion-1 {
    margin-top: 40px;
    margin-right: auto;
    margin-bottom: 20px;
    margin-left: auto;
  }
}

.emotion-2 {
  margin: 0;
}

.emotion-2 {
  margin: 0;
}

<div
  class="emotion-0 emotion-1"
  id="title"
>
  <div
    style="position: relative; white-space: pre-wrap; word-wrap: break-word;"
  >
    <p
      class="emotion-2 ms-xzb9tw"
    >
      <span
        class="ms-1lo5cxy"
      >
        À propos de nous
      </span>
    </p>
  </div>
</div>
`;

exports[`Page correctly renders a localized global element: Makeswift styles 1`] = `
[
  "@media only screen and (min-width: 769px){.ms-srm1zu{font-family:Lato;font-size:30px;font-weight:700;line-height:1.5;font-style:initial;}}@media only screen and (min-width: 576px) and (max-width: 768px){.ms-srm1zu{font-family:Lato;font-size:30px;font-weight:700;line-height:1.5;font-style:initial;}}@media only screen and (max-width: 575px){.ms-srm1zu{font-family:Lato;font-size:16px;font-weight:700;line-height:1.5;font-style:initial;}}",
  "@media only screen and (min-width: 769px){.ms-1lo5cxy{color:hsla(238,87%,49%,1);font-family:Lato;font-size:30px;font-weight:700;line-height:1.5;font-style:initial;}}@media only screen and (min-width: 576px) and (max-width: 768px){.ms-1lo5cxy{color:hsla(238,87%,49%,1);font-family:Lato;font-size:30px;font-weight:700;line-height:1.5;font-style:initial;}}@media only screen and (max-width: 575px){.ms-1lo5cxy{color:hsla(238,87%,49%,1);font-family:Lato;font-size:16px;font-weight:700;line-height:1.5;font-style:initial;}}",
]
`;
